tests/semantic/pass/nil-3.tiger
let
	type a = {}
in
	a {} <> nil
end
