tests/semantic/fail/record-2.tiger
let
	type a = {a : int}
	var a := a {}
in
end
